[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Subhamoy Biswas <admin@neosubhamoy.xyz>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
telebot = "^0.0.4"
pyTelegramBotAPI = "^4.9.0"
requests = "^2.28.1"
threaded = "^4.1.0"
regex = "^2022.10.31"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"